# tash

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml
.github/workflows/: audit.yml  build.yml  lint.yml  main.yml  pr.yml  publish-crates.yml  release.yml  test.yml
src/: args.rs  errors.rs  handle.rs  main.rs
src/actions/: delete.rs  empty.rs  get.rs  list.rs  mod.rs  push.rs
tests/: cli.rs  delete.rs  empty.rs  get.rs  help.rs  list.rs  push.rs
tests/common/: mod.rs
tests/static/: sample.txt
