[package]
name = "tash"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
thiserror = "2.0.15"

[dev-dependencies]
insta = "1.43.1"
insta-cmd = "0.6.0"
tempfile = "3.21.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
