[package]
name = "tash"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/dhth/tash"
description = "stash content that you can access later"
homepage = "https://tools.dhruvs.space/tash/"
keywords = [
    "cli",
]
categories = [
    "command-line-utilities",
]
exclude = [
    ".github",
    "deny.toml",
    "justfile",
]

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
regex = "1.12.2"
thiserror = "2.0.17"

[dev-dependencies]
insta = "1.44.3"
insta-cmd = "0.6.0"
tempfile = "3.23.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
